<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp">

            <ImageButton
                android:id="@+id/imgBack"
                android:layout_width="30dp"
                android:layout_height="24dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                style="@style/TitleToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/imgBack"
                android:text="@string/profile" />
        </RelativeLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linearProfile"
            android:layout_marginTop="-140dp" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="-60dp"
            android:src="@drawable/ic_air_conditioner_outline"
            app:tint="@color/devider" />

        <LinearLayout
            android:id="@+id/linearProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginTop="90dp"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/programmer_name"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/pengembang" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearProfile"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:textSize="14sp" />

                <!--                <TextView-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginTop="32dp"-->
                <!--                    android:gravity="center"-->
                <!--                    android:text="@string/name_pembimbing_i"-->
                <!--                    android:textColor="@color/primary_text"-->
                <!--                    android:textSize="18sp"-->
                <!--                    android:textStyle="bold" />-->

                <!--                <TextView-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:gravity="center"-->
                <!--                    android:text="@string/pembimbing_i" />-->

                <!--                <TextView-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginTop="8dp"-->
                <!--                    android:gravity="center"-->
                <!--                    android:text="@string/name_pembimbing_ii"-->
                <!--                    android:textColor="@color/primary_text"-->
                <!--                    android:textSize="18sp"-->
                <!--                    android:textStyle="bold" />-->

                <!--                <TextView-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:gravity="center"-->
                <!--                    android:text="@string/pembimbing_ii" />-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:text="@string/prodi_name"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/major_name"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/faculty_name"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/campus_name"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/years"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="62dp"
                    android:justificationMode="inter_word"
                    android:text="@string/desc"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>


</RelativeLayout>