<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarRemote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp">

                <ImageButton
                    android:id="@+id/imgBack"
                    android:layout_width="30dp"
                    android:layout_height="24dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    android:id="@+id/tvTitleAC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>
        </com.google.android.material.appbar.MaterialToolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbarRemote"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/rlTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/tvTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="end"
                    android:minEms="1"
                    android:text="24"
                    android:textColor="@color/primary_text"
                    android:textSize="120sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="18dp"
                    android:layout_toEndOf="@id/tvTemp"
                    android:text="\u2103"
                    android:textColor="@color/primary_text"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/tvTemp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="18dp"
                    android:layout_toEndOf="@id/tvTemp"
                    android:text="@string/pendingin"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_ac_unit"
                    app:drawableTint="@color/primary_text" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlTemp"
                android:layout_alignParentStart="true"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:visibility="invisible">

                <ImageView
                    android:id="@+id/imgSpeed"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_speed_0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_toEndOf="@id/imgSpeed"
                    android:text="@string/speed"
                    android:textColor="@color/primary_text" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlSwing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlTemp"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:visibility="invisible">

                <ImageView
                    android:id="@+id/imgSwing"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_swing_center" />

                <TextView
                    android:id="@+id/tvSwing"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_toEndOf="@id/imgSwing"
                    android:text="@string/arrow_bottom"
                    android:textColor="@color/primary_text" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/white"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgPower"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_power"
            app:tint="@color/anu" />

        <LinearLayout
            android:id="@+id/llTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgPower"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="36dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/minTemp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignParentEnd="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_min"
                    app:tint="@color/devider" />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/suhu"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/addTemp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignParentStart="true"
                    android:padding="8dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_add"
                    app:tint="@color/devider" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/llTemp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnSpeed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/speed"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnSwing"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/swing"
                android:textAllCaps="false"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>